2003/12/04 13:07 (-0500) rwmcfa1

	* MakeHelper.pm: @ARGV is now searched for disable-apidoc which,
	surprise, disables the generation of the api doc pods thus speeding up
	the build process.

2003/12/04 00:12 (-0500) muppetman

	* Glib.pm: credit where credit is due
	* Glib.pm: bump version to 1.030 to keep cvs head ahead of the
	stable series.

2003/12/02 23:49 (-0500) rwmcfa1

	* : Merged from rel-1-02-branch

	* GenPod.pm: implement a sorter function that pushes GObject based pkgs
	to the front, instead of alpha. this is so that all classes will be
	instantiaed (sp?) by the time we do the interfaces.

2003/12/02 18:30 (-0500) muppetman

	* t/b.t: inexplicitly missing a test

2003/12/02 18:30 (-0500) muppetman

	* GType.xs: base_init support for perl-derived GObjects.  during
	class initialization, invoke the method INIT_BASE in the object's
	package if it exists.  see http://lists.gnome.org/archives/gtk-\
	perl-list/2003-November/msg00194.html (and indeed the rest of that
	thread) for discussion.

	* t/6.t, MANIFEST: test the base_init stuff by ensuring multiple
	derivation works as expected.

2003/12/02 18:26 (-0500) muppetman

	* GParamSpec.xs: stray code in a switch statement prevented the
	successful operation of Glib::ParamSpec->object().

2003/12/01 16:21 (-0500) rwmcfa1

	* GenPod.pm: put an extra \n after each of the pods to keep pod stuff
	happy

2003/11/29 12:45 (-0500) muppetman

	* Glib.pm, README: bump version to 1.013, make release from
	rel-1-02-branch.

2003/11/29 12:23 (-0500) rwmcfa1

	* GenPod.pm: modified copyright text as list decided.

2003/11/28 22:00 (-0500) muppetman

	* GType.xs: remove unused var and code.
	* Glib.xs: apparently this bit of doc has been b0rken for a very
	long time.

2003/11/28 14:47 (-0500) rwmcfa1

	* ParseXSDoc.pm, GenPod.pm: moved inclusion processing into GenPod 
	rather that ParseXSDoc, it will need to be run later than parse.

	* MakeHelper.pm: DOC_PL_DEPENDS is now POD_DEPENDS, related to ^
