@@ -1,3 +1,8 @@
+2003/12/08 09:44 (-0500) rwmcfa1
+
+	* t/6.t: use strict and warnings, b/c newer Test::More do anyway, 
+	required a few minor syntax changes to work.
+
 2003/12/04 13:07 (-0500) rwmcfa1
 
 	* MakeHelper.pm: @ARGV is now searched for disable-apidoc which,
